# S2CW

./: .gitignore  README.md  RJMCMC.py  notebook.ipynb  pyproject.toml  written_answers.tex
s2utils/: RJMCMC.py
