[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s2cw"
version = "0.1.0"
description = "S2 Coursework project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "matplotlib",
    "emcee",
    "corner",
    "dynesty",
    "ipykernel",
    "notebook",
]

[tool.setuptools]
py-modules = ["RJMCMC"]
